@startuml Fluxo de caixa
title Diagrama de classes da solução
left to right direction
skinparam shadowing false

abstract class Entity{
    +Guid Identificador

    +Equals()
    +GetHashCode()
    +ToString()
} 

class Lancamento{
    +short CodigoLancamento
    +string Descricao
    +char TipoDC
    +Datatime dataHoraCriacao
}

class Movimento{
    +int IdentificadorMovimento
    +Lancamento Lancamento
    +decimal Valor
    +Datatime DataMovimento
}

class Consolidado{
    +Datetime DataMovimento
    +decimal Debito
    +decimal Credito
    +decimal Valor
    +char TipoDC 
}

Movimento o-- Lancamento : Classificado por
Entity <|-- Lancamento
Entity <|-- Movimento
Entity <|-- Consolidado

@enduml

